[gd_scene format=3 uid="uid://b2k78m46nbgoa"]

[ext_resource type="Script" uid="uid://eq8s83c4v80q" path="res://assets/interaction/door.gd" id="1_0cotw"]
[ext_resource type="PackedScene" uid="uid://o08f2kqjkjfm" path="res://assets/dialogue/interactButton.tscn" id="1_7jweo"]
[ext_resource type="Texture2D" uid="uid://de3ogfjrkcsfo" path="res://terrains/Portas/porta1.png" id="2_qjfpb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjfpb"]
size = Vector2(34, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tp573"]
size = Vector2(6, 40)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qjfpb"]
polygon = PackedVector2Array(-10, -53, -16, -53, -16, 27, -10, 27)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tp573"]
polygon = PackedVector2Array(-16, 58, -16, 8, 16, 8, 16, 58, 15, 14, -15, 14)

[sub_resource type="Animation" id="Animation_tp573"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qjfpb"]
resource_name = "closed"
length = 0.06667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_amge4"]
resource_name = "open"
length = 0.06667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amge4"]
_data = {
&"RESET": SubResource("Animation_tp573"),
&"closed": SubResource("Animation_qjfpb"),
&"open": SubResource("Animation_amge4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qjfpb"]
radius = 130.0

[node name="Door" type="CharacterBody2D" unique_id=241297043]
z_index = 1
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
script = ExtResource("1_0cotw")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=711038541]
visibility_layer = 3
y_sort_enabled = true
position = Vector2(8, 1)
texture = ExtResource("2_qjfpb")
offset = Vector2(4, 0)
hframes = 4
vframes = 2
frame = 1
region_enabled = true
region_rect = Rect2(0, 0, 240, 240)

[node name="CollisionClosed" type="CollisionShape2D" parent="." unique_id=783950894]
visibility_layer = 3
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_qjfpb")

[node name="CollisionOpen" type="CollisionShape2D" parent="." unique_id=85219722]
visibility_layer = 3
position = Vector2(-13, 2)
shape = SubResource("RectangleShape2D_tp573")
disabled = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="." unique_id=1294714927]
occluder = SubResource("OccluderPolygon2D_qjfpb")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="." unique_id=1610768339]
position = Vector2(0, -61)
occluder = SubResource("OccluderPolygon2D_tp573")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1359562227]
libraries/ = SubResource("AnimationLibrary_amge4")
autoplay = &"closed"

[node name="InteractButton" parent="." unique_id=257144103 instance=ExtResource("1_7jweo")]
position = Vector2(0, -61)

[node name="buttonSprite" parent="InteractButton" index="0"]
position = Vector2(0, -17)

[node name="CollisionShape2D" parent="InteractButton/Area2D" index="0"]
z_index = 1
y_sort_enabled = true
position = Vector2(4.76837e-07, -10)
scale = Vector2(0.4, 0.4)
shape = SubResource("CircleShape2D_qjfpb")

[editable path="InteractButton"]
